# co3

./: .gitignore  README.md  pyproject.toml  requirements.txt
_deprecated/: composer.py  engine.py
co3/: __init__.py  accessor.py  co3.py  collector.py  component.py  composer.py  database.py  domain.py  engine.py  indexer.py  manager.py  mapper.py  medium.py  relation.py  resource.py  schema.py  syncer.py  uri.py
co3/accessors/: __init__.py  fts.py  sql.py  vss.py
co3/components/: __init__.py
co3/databases/: sql.py
co3/domains/: __init__.py
co3/engines/: __init__.py
co3/managers/: fts.py  sql.py  vss.py
co3/mappers/: __init__.py
co3/relations/: __init__.py
co3/resources/: disk.py
co3/schemas/: __init__.py
co3/util/: __init__.py  db.py  types.py
docs/: conf.py
docs/_autoref/: co4.accessors.rst  co4.collectors.rst  co4.databases.rst  co4.managers.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/_autoref/: co4.accessors.doctree  co4.collectors.doctree  co4.composers.doctree  co4.databases.doctree  co4.doctree  co4.managers.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_autoref/: co4.accessors.html  co4.html  (+5 more)
examples/: database.ipynb  mapper.ipynb  vegetables.py
examples/.ipynb_checkpoints/: database-checkpoint.ipynb  mapper-checkpoint.ipynb  vegetables-checkpoint.py
tests/: co4_api_demo.py  co4_example.py  imports.py  test_co3.py  test_database.py  test_mapper.py
tests/setups/: vegetables.py
(+8 files in other folders)
